[package]
name = "dewey"
version = "0.1.1"
authors = ["Enno Boland <gottox@voidlinux.eu>"]
repository = "https://github.com/Gottox/dewey"
description = "version parser and comparator that works with non-semantic versions"
documentation = "https://docs.rs/dewey"
readme = "README.md"
keywords = [ "version", "compare" ]
categories = [ "parsing" ]
license = "MIT"

[dependencies]
static_map = "0.1.1"
static_map_macros = "0.1.1"
